argoproj/argo-cd/manifests/network-policy-application-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-application-controller
spec:
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
    - Ingress
