argoproj/argo-cd/manifests/network-policy-cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-acme-cert-manager
spec:
  ingress:
    - ports:
        - port: http
          protocol: TCP
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
