argoproj/argo-cd/manifests/network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-deny-all
spec:
  egress:
    - ports:
        - port: 6443
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 22
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
  policyTypes:
    - Ingress
    - Egress
