argoproj/argo-cd/manifests/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-ingress
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: namespace
                operator: In
                values:
                  - system-ingress-nginx
                  - ingress-nginx
                  - system-traefik
      ports:
        - port: http
          protocol: TCP
        - port: grpc
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-dex-server
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-server-ingress
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: namespace
                operator: In
                values:
                  - system-ingress-nginx
                  - ingress-nginx
                  - system-traefik
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-server
  policyTypes:
    - Ingress
