argoproj/argo-cd/manifests/network-policy-metadata-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-metadata-api
spec:
  egress:
    - ports:
        - port: 988
          protocol: TCP
      to:
        - ipBlock:
            cidr: 169.254.169.252/32
  podSelector:
    matchLabels:
      app.kubernetes.io/component: repo-server
      app.kubernetes.io/instance: argocd
  policyTypes:
    - Egress
