argoproj/argo-cd/manifests/network-policy-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-metrics
spec:
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
  policyTypes:
    - Ingress
