argoproj/argo-cd/manifests/network-policy-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-server
spec:
  ingress:
    - ports:
        - port: server
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  policyTypes:
    - Ingress
